feat: 实现完整的用户管理功能和Token保存机制修复
## 主要功能
- 新增基于RBAC的用户管理系统
- 实现角色权限管理功能
- 修复Token时区解析和保存机制

## 后端变更
- 扩展User模型，增加角色关联和权限检查方法
- 新增Role模型和UserRoleLink关联表
- 实现用户CRUD API，支持搜索、过滤和角色分配
- 新增角色管理API endpoints
- 添加数据库迁移文件

## 前端变更
- 新增用户管理页面组件和路由配置
- 实现用户列表、搜索、创建、编辑功能
- 新增角色管理界面
- 修复Vite代理配置，确保前后端通信正常
- 修复Token时区解析问题，确保持久化保存正常

## 技术改进
- Token双重存储：Cookie(accessToken) + localStorage(refreshToken)
- 自动Token刷新机制
- 权限验证：页面级和按钮级权限控制
- API代理配置优化

## 测试验证
- 通过Playwright MCP完整测试验证
- Token保存机制完全正常工作
- 用户权限验证和路由访问正常

--- a/frontend/locales/zh-CN.yaml
+++ b/frontend/locales/zh-CN.yaml
@@ -67,6 +67,9 @@ menus:
   pureFourZeroFour: "404"
   pureFourZeroOne: "403"
   pureFive: "500"
+  userManagement: 用户管理
+  userList: 用户列表
+  roleList: 角色管理
   purePermission: 权限管理
   purePermissionPage: 页面权限
   purePermissionButton: 按钮权限
